# iotc-generic-c-sdk

./: .gitignore  .gitmodules  README.md
.github/workflows/: main.yml
doc/: Linux.md  Windows.md
iotc-c-generic-sdk/: CMakeLists.txt
iotc-c-generic-sdk/azure-sdk-impl/src/: azure_sdk_client.c
iotc-c-generic-sdk/include/: iotc_device_client.h  iotconnect.h
iotc-c-generic-sdk/paho-c-impl/include/: iotc_paho_client.h
iotc-c-generic-sdk/paho-c-impl/src/: iotc_paho_client.c
iotc-c-generic-sdk/src/: iotc_algorithms.c  iotconnect.c
iotc-generic-c-sdk/: CMakeLists.txt
iotc-generic-c-sdk/azure-sdk-impl/src/: azure_sdk_client.c
iotc-generic-c-sdk/curl-http-impl/include/: iotc_http_request.h
iotc-generic-c-sdk/curl-http-impl/src/: iotc_http_request.c
iotc-generic-c-sdk/include/: iotc_algorithms.h  iotc_device_client.h  iotconnect.h
iotc-generic-c-sdk/paho-c-impl/src/: iotc_paho_client.c
iotc-generic-c-sdk/src/: iotc_algorithms.c  iotconnect.c
samples/: .gitignore  README.md
samples/basic-sample/: CMakeLists.txt  main.c
samples/basic-sample/config/: app_config.h
samples/cli-json/: CMakeLists.txt  main.c
samples/cli-json-sample/: CMakeLists.txt  main.c
scripts/: setup-project.sh
